force-app/main/default/objects/Product_Attribute_Variant__mdt/Product_Attribute_Variant__mdt.object-meta.xml
<CustomObject>
    <description>Maps a Product + Attribute Value + Site to the Odoo ns_product_product_attr integer ID. Used by IP-1 (SendNewOrdersQueueable) to send the correct variant when creating Odoo sale order lines. Sourced from the Odoo Pricelist export &quot;Product Attribute Combination&quot; columns.</description>
    <label>Product Attribute Variant</label>
    <pluralLabel>Product Attribute Variants</pluralLabel>
</CustomObject>