force-app/main/default/objects/Product_Attribute_Variant__mdt/fields/Attribute_Value__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Value__c</fullName>
    <description>The selected attribute value (e.g. 3kVA, 5kVA). Must match values in Product2.Attribute_Values__c.</description>
    <label>Attribute Value</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>