force-app/main/default/objects/Product_Attribute_Variant__mdt/fields/Odoo_Combo_Id__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Combo_Id__c</fullName>
    <description>The Odoo ns_product_product_attr integer ID. Sent as ns_product_attribute_value in the IP-1 sale order line payload.</description>
    <label>Odoo Combo ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>