force-app/main/default/objects/Product_Attribute_Variant__mdt/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Product2.ProductCode (e.g. CAB001.RC). Combined with Attribute_Value__c and Site_Code__c to form the unique variant key.</description>
    <label>Product Code</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>