force-app/main/default/objects/Product_Attribute_Variant__mdt/fields/Site_Code__c.field-meta.xml
<CustomField>
    <fullName>Site_Code__c</fullName>
    <description>Operation site code (e.g. TYO1, SEL1, JKT2). Must match Site__c.Site_Code__c.</description>
    <label>Site Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>