force-app/main/default/objects/Product_Attribute_Variant__mdt/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>List price for this product+attribute+site combination. Stamped onto QuoteLineItem.List_Price__c when the attribute is selected.</description>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>